@@ -21,7 +21,13 @@ import java.util.*;
 public class WebLoggingFilter extends OncePerRequestFilter {
 
     private final AntPathMatcher matcher = new AntPathMatcher();
-    private final Set<String> excludeUrls = Collections.emptySet();
+    private final Set<String> excludeUrls = Set.of(
+            "/swagger-ui/**",
+            "/v3/api-docs/**",
+            "/swagger-resources/**",
+            "/webjars/**",
+            "/h2-console/**"
+    );
     private static final String EMPTY = "";
 
     @Override
@@ -32,6 +38,13 @@ public class WebLoggingFilter extends OncePerRequestFilter {
     ) throws ServletException, IOException {
         if (isExcludedUrl(request.getRequestURI())) {
             filterChain.doFilter(request, response);
+            return;
+        }
+
+        if (isMultipartContent(request)) {
+            logMultipartRequest(request);
+            filterChain.doFilter(request, response);
+            logResponse(response);
             return;
         }
 
@@ -50,6 +63,25 @@ public class WebLoggingFilter extends OncePerRequestFilter {
         filterChain.doFilter(wrappingRequest, wrappingResponse);
         log.info("[RESPONSE] Body : {}", getResponseBody(wrappingResponse));
         wrappingResponse.copyBodyToResponse();
+    }
+
+    private boolean isMultipartContent(HttpServletRequest request) {
+        String contentType = request.getContentType();
+        return contentType != null && contentType.toLowerCase().startsWith("multipart/");
+    }
+
+
+    private void logMultipartRequest(HttpServletRequest request) {
+        log.info(
+                "[MULTIPART REQUEST] {}, {}\n Headers: {}",
+                request.getMethod(),
+                request.getRequestURI(),
+                getHeaders(request)
+        );
+    }
+
+    private void logResponse(HttpServletResponse response) {
+        log.info("[RESPONSE] Status: {}", response.getStatus());
     }
 
     private Map<String, String> getHeaders(HttpServletRequest request) {
